--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "generate-embeddings": "node ./scripts/generateEmbeddings.js"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-ui-react": "^0.4.6",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.0",
     "ai": "^2.2.27",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
+    "bottleneck": "^2.19.5",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^13.5.6",
@@ -25,14 +31,22 @@
     "moment": "^2.29.4",
     "next": "13.5.6",
     "next-pwa": "^5.6.0",
+    "node-spider": "^1.4.1",
     "openai": "^4.20.1",
     "openai-edge": "^1.2.2",
     "react": "^18",
     "react-big-calendar": "^1.8.5",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1",
     "react-toastify": "^9.1.3",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "swr": "^2.2.4",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.2",
+    "turndown": "^7.1.2",
+    "url-parse": "^1.5.10",
     "vanta": "^0.5.24",
     "web-push": "^3.6.6"
   },
